--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -1,4 +1,4 @@
-#login form button, #login form input {
+#login form button, #login form > input {
   background-color: #224957;
   margin: 1em 0px;
   width: 80%;
@@ -11,25 +11,25 @@
   border: none;
 }
 
-#login form button::-webkit-input-placeholder, #login form input::-webkit-input-placeholder {
+#login form button::-webkit-input-placeholder, #login form > input::-webkit-input-placeholder {
   color: white;
   text-align: left;
   font-size: 1;
 }
 
-#login form button:-ms-input-placeholder, #login form input:-ms-input-placeholder {
+#login form button:-ms-input-placeholder, #login form > input:-ms-input-placeholder {
   color: white;
   text-align: left;
   font-size: 1;
 }
 
-#login form button::-ms-input-placeholder, #login form input::-ms-input-placeholder {
+#login form button::-ms-input-placeholder, #login form > input::-ms-input-placeholder {
   color: white;
   text-align: left;
   font-size: 1;
 }
 
-#login form button::placeholder, #login form input::placeholder {
+#login form button::placeholder, #login form > input::placeholder {
   color: white;
   text-align: left;
   font-size: 1;
@@ -73,7 +73,7 @@ html {
   font-size: 1vw;
 }
 
-#login div {
+#login > div {
   width: 30%;
   text-align: center;
   margin-bottom: 10vw;
@@ -98,6 +98,24 @@ html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+#login form div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: clamp(50px, 27%, 300px);
+  margin-bottom: 1em;
 }
 
 #login img {
