--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -121,6 +121,9 @@ html {
 #login img {
   position: absolute;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
+  height: 19em;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 /*# sourceMappingURL=App.css.map */
