--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -51,6 +51,8 @@ html {
   img {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 100vw;
+    height: 19em;
+    object-fit: cover;
   }
 }
