--- a/src/App.css
+++ b/src/App.css
@@ -442,6 +442,15 @@
   border-bottom: 1px solid #eeeeee;
 }
 
-button:focus{
-  background-color: #0080ff;
+/* Next7Days */
+.Next7Days .day {
+  margin: 5px;
+  display: flex;
+}
+.Next7Days .day .name {
+  font-weight: bold;
+  font-size: 1rem;
+}
+.Next7Days .day .total-todos {
+  margin-left: 10px;
 }
