--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
+
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Ubuntu", sans-serif;
 }
-
 /* App */
 .App {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -37,14 +34,9 @@
 
 /* User */
 .User {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  align-items: center;
+  justify-content: space-around;
   padding: 1rem;
   border: 1px solid #ebebeb;
 }
@@ -62,12 +54,8 @@
 
 .User .info a {
   text-decoration: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 /* Modal */
@@ -80,26 +68,21 @@
   background: rgba(0, 0, 0, 0.8);
   z-index: 99;
 }
-
 .Modal .container {
   position: absolute;
   top: 25%;
   left: 50%;
-  -webkit-transform: translate(-50%, -25%);
-          transform: translate(-50%, -25%);
+  transform: translate(-50%, -25%);
 }
-
 /* AddNewTodo */
 .AddNewTodo {
   border-bottom: 1px solid #ebebeb;
 }
-
 .AddNewTodo .btn {
   padding: 1rem;
   width: 100%;
   height: 70px;
 }
-
 .AddNewTodo .btn button {
   width: 100%;
   height: 100%;
@@ -111,14 +94,10 @@
   font-weight: bold;
   cursor: pointer;
 }
-
 .AddNewTodo .btn button:hover {
-  -webkit-filter: brightness(1.1);
-          filter: brightness(1.1);
-  -webkit-transition: all 300ms ease;
+  filter: brightness(1.1);
   transition: all 300ms ease;
 }
-
 /* AddNewTodo form */
 .TodoForm {
   padding: 1rem 1rem calc(1rem + 40px) 1rem;
@@ -126,7 +105,6 @@
   background: white;
   border-radius: 4px;
 }
-
 .TodoForm .text input {
   padding: 1rem;
   width: 100%;
@@ -134,57 +112,37 @@
   border: none;
   font-size: 1.2rem;
 }
-
 .TodoForm .text input:focus {
   outline: none;
   border-bottom: 1px solid #0080ff;
 }
-
 .TodoForm .remind {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 0.5rem;
 }
-
 .TodoForm p {
   margin-left: 10px;
 }
-
 .TodoForm .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   margin-bottom: 5px;
 }
-
 .TodoForm .pick-day {
   padding: 1.5rem 1.5rem 0 1.5rem;
 }
-
 .TodoForm .pick-time {
   padding: 1.5rem;
 }
-
 .TodoForm .pick-project {
   padding: 0.5rem;
 }
-
 .TodoForm .pick-project .projects {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 1rem 1rem 0 1rem;
 }
-
 .TodoForm .pick-project .projects .project {
   border: 1px solid #0080ff;
   border-radius: 5px;
@@ -192,26 +150,22 @@
   margin: 5px;
   cursor: pointer;
 }
-
 .TodoForm .pick-project .projects .active {
   background: #0080ff;
   color: white;
 }
-
 .TodoForm .cancel {
   position: absolute;
   top: 0;
   right: 5px;
   cursor: pointer;
 }
-
 .TodoForm .confirm {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
 }
-
 .TodoForm .confirm button {
   width: 100%;
   height: 40px;
@@ -222,66 +176,41 @@
   border-radius: 0 0 4px 4px;
   cursor: pointer;
 }
-
 /* Calendar */
 .Calendar {
   padding: 1rem;
   border-bottom: 1px solid #ebebeb;
 }
-
 .Calendar .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .Calendar .header .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  align-items: center;
+  flex: 1;
 }
-
 .Calendar .header .title p {
   margin-left: 5px;
   font-size: 1.1rem;
   font-weight: bold;
 }
-
 .Calendar .header .btns span {
   border-radius: 50%;
   cursor: pointer;
   width: 25px;
   height: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .Calendar .header .btns span:hover {
   background-color: #ebebeb;
-  -webkit-transition: background 300ms ease-in-out;
   transition: background 300ms ease-in-out;
 }
-
 .Calendar .items {
   padding: 0.5rem;
 }
-
 .Calendar .items .item {
   padding: 0.25rem;
   margin: 5px;
@@ -294,101 +223,60 @@
   padding: 1rem;
   border-bottom: 1px solid #ebebeb;
 }
-
 .Projects .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .Projects .header .title {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  align-items: center;
+  flex: 1;
 }
-
 .Projects .header .title p {
   margin-left: 5px;
   font-size: 1.1rem;
   font-weight: bold;
 }
-
 .Projects .header .btns {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .Projects .header .btns span.edit {
   margin-right: 5px;
 }
-
 .Projects .header .btns span {
   border-radius: 50%;
   cursor: pointer;
   width: 25px;
   height: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
-
 .Projects .header .btns span:hover {
   background-color: #ebebeb;
-  -webkit-transition: background 300ms ease-in-out;
   transition: background 300ms ease-in-out;
 }
-
 .Projects .items {
   padding: 0.5rem;
 }
-
 /* Project */
 .Project {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 0.25rem;
   margin: 5px;
   font-size: 1rem;
 }
-
 .Project .name {
   cursor: pointer;
   word-break: break-all;
 }
-
 .Project .btns {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .Project .btns .total-todos {
   position: absolute;
   right: 0;
@@ -396,48 +284,29 @@
   width: 25px;
   height: 25px;
   font-size: 0.9rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   border-radius: 50%;
 }
-
 .Project .btns .edit-delete {
   position: absolute;
   right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .Project .btns .edit-delete span {
   border-radius: 50%;
   cursor: pointer;
   width: 25px;
   height: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition: background 300ms ease-in-out;
+  align-items: center;
+  justify-content: center;
   transition: background 300ms ease-in-out;
 }
-
 .Project .btns .edit-delete span.edit:hover {
   background: #acffac;
 }
-
 .Project .btns .edit-delete span.delete:hover {
   background: #ffacac;
 }
@@ -446,7 +315,6 @@
 .AddNewProject .add-button span {
   margin-right: 5px;
 }
-
 /* ProjectForm */
 .ProjectForm {
   background-color: white;
@@ -455,7 +323,6 @@
   position: relative;
   padding-bottom: 40px;
 }
-
 .ProjectForm input {
   width: 100%;
   height: 40px;
@@ -463,12 +330,10 @@
   border: none;
   font-size: 1.2rem;
 }
-
 .ProjectForm input:focus {
   outline: none;
   border-bottom: 1px solid #0080ff;
 }
-
 .ProjectForm button {
   position: absolute;
   bottom: 0;
@@ -479,41 +344,38 @@
   font-size: 1rem;
   font-weight: bold;
   cursor: pointer;
-  -webkit-transition: -webkit-filter 300ms ease-in-out;
-  transition: -webkit-filter 300ms ease-in-out;
   transition: filter 300ms ease-in-out;
-  transition: filter 300ms ease-in-out, -webkit-filter 300ms ease-in-out;
 }
-
 .ProjectForm button.cancel {
   left: 0;
   background-color: #bebebe;
 }
-
 .ProjectForm button.confirm {
   right: 0;
   background-color: #0080ff;
 }
-
 .ProjectForm button:hover {
-  -webkit-filter: brightness(1.1);
-          filter: brightness(1.1);
+  filter: brightness(1.1);
 }
 
 /* Todos */
 .Todos {
   width: clamp(300px, 25vw, 500px);
+
   height: 80%;
   background-color: white;
+
   position: absolute;
   bottom: 40px;
   left: 40px;
+
   border-radius: 4px;
   opacity: 0.9;
+
   padding: 0 0.5rem 0.5rem 0.5rem;
+
   overflow-y: auto;
 }
-
 .Todos .selected-project {
   margin: 1rem 0;
   text-transform: capitalize;
@@ -522,90 +384,71 @@
   padding-bottom: 2px;
   border-bottom: 1px solid #eeeeee;
 }
-
 .Todos .todos {
   overflow-y: auto;
 }
-
 /* Todo */
 .Todo {
   padding: 0.5rem 1rem;
 }
-
 .Todo .todo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .Todo .todo-container .check-todo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
+
   width: 15px;
 }
-
 .Todo .todo-container span {
   cursor: pointer;
 }
-
 .Todo .todo-container .text {
   position: relative;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
   margin: 0 10px;
   cursor: pointer;
 }
-
 .Todo .todo-container .text span {
   font-size: 0.8rem;
   color: #bebebe;
 }
-
 .Todo .todo-container .text .line {
   height: 1px;
   background: #bebebe;
   position: absolute;
   top: 25%;
   width: 0;
-  -webkit-transition: width 250ms ease-in-out;
   transition: width 250ms ease-in-out;
 }
-
 .Todo .todo-container .text .line-through {
   width: 100%;
 }
-
 .Todo .todo-container .add-to-next-day {
   margin-right: 10px;
 }
-
 /* EditTodo */
 .EditTodo {
   position: absolute;
   bottom: 40px;
   left: calc(90px + 25vw + 60px);
+
   background-color: white;
+
   height: 80%;
   width: clamp(300px, 25vw, 500px);
+
   border-radius: 4px;
   opacity: 0.9;
 }
-
 .EditTodo .header {
   margin: 1rem 0.5rem;
+
   font-size: 1.2rem;
   font-weight: bold;
+
   padding-bottom: 2px;
   border-bottom: 1px solid #eeeeee;
 }
@@ -613,48 +456,36 @@
 /* Next7Days */
 .Next7Days .day {
   margin: 5px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
-
 .Next7Days .day .name {
   font-weight: bold;
   font-size: 1rem;
 }
-
 .Next7Days .day .total-todos {
   margin-left: 10px;
 }
 
-#LoginPage {
+
+#LoginPage{
   width: 100vw;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-#LoginPage > img {
+#LoginPage > img{
   position: absolute;
   bottom: 0;
   width: 100vw;
   height: 20em;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
+  
 }
 
-#LoginPage h1 {
+#LoginPage h1{
   text-shadow: 3px 3px #a5a0a0;
   font-size: 3vw;
   font-weight: 400px;
@@ -665,12 +496,10 @@
   height: 42px;
   background-color: #4285f4;
   border-radius: 2px;
-  -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-          box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+  box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
   margin-top: 2vh;
   cursor: pointer;
 }
-
 .google-btn .google-icon-wrapper {
   position: absolute;
   margin-top: 1px;
@@ -680,7 +509,6 @@
   border-radius: 2px;
   background-color: #fff;
 }
-
 .google-btn .google-icon {
   position: absolute;
   margin-top: 11px;
@@ -688,7 +516,6 @@
   width: 18px;
   height: 18px;
 }
-
 .google-btn .btn-text {
   float: right;
   margin: 11px 11px 0 0;
@@ -697,39 +524,28 @@
   letter-spacing: 0.2px;
   font-family: "Roboto";
 }
-
 .google-btn:hover {
-  -webkit-box-shadow: 0 0 6px #4285f4;
-          box-shadow: 0 0 6px #4285f4;
+  box-shadow: 0 0 6px #4285f4;
 }
-
 .google-btn:active {
   background: #1669f2;
 }
 
-.small {
-  position: absolute;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 99;
-  background-color: #000;
-  color: white;
+.small{
+position: absolute;
+justify-content: center;
+display: none;
+align-items: center;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+z-index: 99;
+background-color: #000;
+color: white;
 }
 
+
 @media (max-width: 900px) {
-  .small {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+  .small{display: flex;}
 }
-/*# sourceMappingURL=App.css.map */
