--- a/src/App.scss
+++ b/src/App.scss
@@ -474,6 +474,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  background-color: rgb(240, 240, 240);
 }
 
 #LoginPage > img{
