added some text to let users know

--- a/src/App.css
+++ b/src/App.css
@@ -727,6 +727,10 @@
   text-align: center;
 }
 
+.text{
+  margin-top: 40px;
+}
+
 @media (max-width: 900px) {
   .small {
     display: -webkit-box;
