--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,8 @@
 
 .User .logo img {
   width: 50px;
-  border-radius: 50%;
-  border: 1px solid #000;
+  transform: scale(2);
+  
 }
 
 .User .info p {
