changed a bunch of css styles and changed all the dates to dd/mm/yyyy format

--- a/src/App.css
+++ b/src/App.css
@@ -726,6 +726,12 @@
   color: white;
 }
 
+.text {
+  margin-top: 40px;
+  text-align: center;
+  width: 500px;
+}
+
 @media (max-width: 900px) {
   .small {
     display: -webkit-box;
